--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "type": "module",
   "scripts": {
-    "build": "tsc",
-    "serve": "wds"
+    "build": "tsc --watch",
+    "build:prod": "rollup -c",
+    "serve": "wds --watch"
   },
   "dependencies": {
     "@lit/reactive-element": "^1.0.0",
@@ -11,9 +12,14 @@
     "lit-html": "^2.0.0"
   },
   "devDependencies": {
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "@rollup/plugin-replace": "^4.0.0",
     "@web/dev-server": "^0.1.31",
     "@web/dev-server-legacy": "^1.0.0",
     "@webcomponents/webcomponentsjs": "^2.6.0",
+    "rollup": "^2.75.6",
+    "rollup-plugin-summary": "^1.4.3",
+    "rollup-plugin-terser": "^7.0.2",
     "typescript": "^4.7.3"
   }
 }
